--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/uuid": "^10.0.0",
     "concurrently": "^9.0.1",
     "nodemon": "^3.1.7",
     "tslint": "^5.20.1",
@@ -25,6 +26,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "uuid": "^10.0.0"
   }
 }
